examples/invalid/error_lexico_01.chs
nimais main ABRAZO RESPANDO ALMA
    cabal edad DAR 20
    chotear ABRAZO "Hola vos" RESPANDO
    @
CUERPO